--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas==1.5.3
-numpy==1.24.3
-scikit-learn==1.2.2
-imbalanced-learn==0.10.1
-matplotlib==3.7.1
-seaborn==0.12.2
-joblib==1.2.0
+pandas>=2.0.0
+numpy>=1.26.0
+scikit-learn>=1.3.0
+imbalanced-learn>=0.11.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+joblib>=1.3.0
+streamlit
